[package]
name = "lsm-storage"
version = "0.1.0"
authors = ["Marcelo Miranda <marcelo.caridade@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
bincode = "1.3.1"
anyhow = "1.0.32"
